--- a/mainpage.html
+++ b/mainpage.html
@@ -38,6 +38,7 @@ window.onload = bind_events; //Assign bind_events @1-19F7B649
  
       <div class="H1">
         SALAM &amp; GOOD DAY! 
+		<!-- ini adda comel -->
       </div>
  
       <table border="0" cellspacing="3" cellpadding="3" width="98%">
