latest update 17mac2011_11pm

--- a/smartheader.html
+++ b/smartheader.html
@@ -64,8 +64,7 @@ function smartheader_bind_events() {
           <td class="tdTicketAlertLabel">NOT CLOSED:&nbsp;<font class="tdTicketAlert"><a href="{lblNotClose_Src}" id="smartheadersmart_ticketlblNotClose">{lblNotClose}</a></font></td> 
           <td class="tdTicketAlert" width="12%">[ <a href="{lblCritical_Src}" id="smartheadersmart_ticketlblCritical">{lblCritical}</a></td> 
           <td class="tdTicketAlert" width="12%"><a href="{lblMajor_Src}" id="smartheadersmart_ticketlblMajor">{lblMajor}</a>&nbsp;</td> 
-          <td class="tdTicketAlert" width="12%"><a href="{lblMinor_Src}" id="smartheadersmart_ticketlblMinor">
-{lblMinor}</a>&nbsp;</td> 
+          <td class="tdTicketAlert" width="12%"><a href="{lblMinor_Src}" id="smartheadersmart_ticketlblMinor">{lblMinor}</a>&nbsp;</td> 
           <td class="tdTicketAlert" width="12%"><a href="{lblInfo_Src}" id="smartheadersmart_ticketlblInfo">{lblInfo}</a> ]</td> 
         </tr>
  
